# python-Nproject_demo

./: .gitlab-ci.yml  README.md
.github/workflows/: ci.yml  trigger-gitlab.yml
weather-poetry/: .gitlab-ci.yml  pyproject.toml
weather-poetry/src/weather_cli/: cli.py
